# sparreal-os

./: .board.toml  .gitignore  Cargo.toml  release-plz.toml  test_all.sh
.cargo/: config.toml
.github/workflows/: container-publish.yml  test-real.yml  test.yml
build-config/: aarch64-unknown-linux-musl-softfloat-pie.json  aarch64-unknown-none-softfloat-pie.json  riscv64.toml
container/: Dockerfile
crates/bare-test/: CHANGELOG.md  Cargo.toml
crates/bare-test-macros/: CHANGELOG.md  Cargo.toml
crates/bare-test-macros/src/: lib.rs
crates/dma-api/: CHANGELOG.md  Cargo.toml  README.md
crates/dma-api/src/: array.rs  common.rs  dbox.rs  def.rs  lib.rs  map_single.rs  pool.rs  slice.rs
crates/dma-api/src/osal/: mod.rs
crates/dma-api/tests/: test.rs  test_helpers.rs
crates/kernutil/: Cargo.toml
crates/kernutil/src/: lib.rs  memory.rs  staticcell.rs
crates/mmio-api/: Cargo.toml
crates/mmio-api/src/: lib.rs
crates/page-table-generic/src/: map.rs  table.rs
crates/page-table-generic/tests/: test.rs
crates/ranges-ext/: Cargo.toml
crates/ranges-ext2/: Cargo.toml
crates/ranges-ext2/src/: less.rs  lib.rs  test_helper.rs  vec.rs
crates/ranges-ext2/tests/: test.rs
crates/someboot/: CHANGELOG.md  Cargo.toml  build.rs
crates/someboot/src/: console.rs  consts.rs  elf.rs  lib.rs  power.rs
crates/someboot/src/acpi/: cpu.rs  (+1 more)
crates/somehal/: Cargo.toml  build.rs
crates/somehal-macros/: CHANGELOG.md  Cargo.toml
crates/somehal-macros/src/: _entry.rs  lib.rs  trap.rs
crates/somehal/src/: console.rs  irq.rs  lib.rs  power.rs
crates/sparreal-kernel/: CHANGELOG.md  Cargo.toml
crates/sparreal-kernel/src/: lang.rs
doc/loongarch/: Devlog.md
driver/block/nvme/: Cargo.toml
driver/block/nvme/src/: block.rs  err.rs  lib.rs  nvme.rs  queue.rs
driver/block/nvme/tests/: test.rs
driver/block/ramdisk/: Cargo.toml
driver/block/rd-block/: Cargo.toml
driver/bus/pcie/: Cargo.toml
driver/eth/intel/: CHANGELOG.md  Cargo.toml
driver/eth/intel/src/e1000/: mod.rs
driver/eth/intel/tests/: test.rs  test_e1000.rs
driver/intc/gic/: Cargo.toml
driver/interface/rdif-base/: Cargo.toml
driver/interface/rdif-eth/: CHANGELOG.md  Cargo.toml
driver/interface/rdif-intc/: Cargo.toml
driver/interface/rdif-net/: Cargo.toml
driver/interface/rdif-pcie/: Cargo.toml
driver/interface/rdif-serial/: Cargo.toml
driver/rdrive/: CHANGELOG.md  Cargo.toml
driver/rdrive/src/: lib.rs  manager.rs
driver/rdrive/src/probe/pci/: mod.rs
driver/serial/: .gitignore  CHANGELOG.md  Cargo.toml
driver/serial/.cargo/: config.toml
driver/serial/src/: pl011.rs
driver/serial/tests/: test.rs
platform/axplat-dyn/: Cargo.toml  axconfig.toml  build.rs  link.ld
platform/axplat-dyn/src/: init.rs  lib.rs  mem.rs  power.rs
platform/somehal/: CHANGELOG.md  Cargo.toml
platform/somehal/src/: common.rs  driver.rs  irq.rs  lib.rs  setup.rs
platform/sparreal-rt/: CHANGELOG.md  Cargo.toml
platform/sparreal-rt/src/: hal_impl.rs  lib.rs  std_compat.rs
scripts/: test-base.sh  test_aarch64.sh  test_aarch64_el1_std.sh  test_aarch64_el1_target_json.sh  test_e1000.sh  test_nvme.sh  test_riscv64.sh  test_x86_64.sh
test-suit/net/: Cargo.toml
test-suit/net/src/: lib.rs  ping.rs
test-suit/smp/: Cargo.toml
test-suit/smp/src/: main.rs
test-suit/std-smoke/: Cargo.toml
test-suit/std-smoke/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/cli/: mod.rs
xtask/src/cli/commands/: mod.rs  test.rs
(+90 files in other folders)
