[package]
name = "axplat-dyn"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[features]
smp = []
irq = []

[dependencies]
axplat = "0.3.1-pre.1"
somehal.workspace = true
log = "0.4"
axconfig-macros = "0.2"
