[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "nvme driver"
edition = "2021"
keywords = ["os", "nvme", "block", "driver"]
license = "MIT"
name = "nvme-driver"
repository = "https://github.com/drivercraft/nvme"
version = "0.4.0"

[dependencies]
dma-api.workspace = true
log = "0.4"
tock-registers = "0.10"

[dev-dependencies]
bare-test.workspace = true
byte-unit = { version = "5.1.6", default-features = false, features = ["byte"] }
fdt-parser.workspace = true
pcie.workspace = true

[lib]
test = false

[[test]]
harness = false
name = "test"
