[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "Intel e1000 ethernet driver"
edition.workspace = true
keywords = ["os", "driver", "ethernet", "intel"]
license = "MIT"
name = "eth-intel"
repository.workspace = true
version = "0.1.0"

[dependencies]
dma-api.workspace = true
log = "0.4"
mmio-api.workspace = true
rdif-net.workspace = true
thiserror = { version = "2", default-features = false }

[dev-dependencies]
bare-test.workspace = true
fdt-edit.workspace = true
pcie.workspace = true
smoltcp = { version = "0.12", default-features = false, features = [
    "alloc",
    "medium-ethernet",
    "proto-ipv4",
    "socket-icmp",
] }

[lib]
test = false

[[test]]
name = "test"
harness = false
